--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,9 @@
       "use": "@vercel/node"
     }
   ],
-
+  "rewrites": [
+    {"source": "/(.*)", "destination": "/"}
+  ],
   "routes": [
     {
       "src": "/(.*)",
